--- a/FinalML.ipynb
+++ b/FinalML.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "db53e5df",
+   "id": "b86509f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "4cee5f73",
+   "id": "6ca8f149",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "fb8bb4ad",
+   "id": "ad1a3241",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "0f50b399",
+   "id": "2d759c81",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "0fdd2ed2",
+   "id": "1bb15450",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "863e6b15",
+   "id": "b53b9750",
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "1a1899c9",
+   "id": "12f5812c",
    "metadata": {
     "scrolled": true
    },
@@ -2168,7 +2168,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "968a2532",
+   "id": "2f44f331",
    "metadata": {
     "scrolled": true
    },
@@ -2191,7 +2191,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "531899c8",
+   "id": "5acb3526",
    "metadata": {},
    "outputs": [
     {
@@ -2251,22 +2251,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 172,
    "id": "f07204ec",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/brettsquires/opt/anaconda3/envs/dev/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "                                        precision    recall  f1-score   support\n",
+      "\n",
+      "                    Aggravated Assault       1.00      1.00      1.00      1641\n",
+      "                     All Other Larceny       1.00      1.00      1.00       662\n",
+      "                    All Other Offenses       1.00      1.00      1.00       648\n",
+      "                                 Arson       0.98      1.00      0.99        45\n",
+      "   Assisting or Promoting Prostitution       0.00      0.00      0.00         1\n",
+      "                    Disorderly Conduct       1.00      1.00      1.00       220\n",
+      "           Driving Under the Influence       0.99      1.00      1.00       212\n",
+      "             Drug Equipment Violations       1.00      1.00      1.00        57\n",
+      "                          Embezzlement       1.00      1.00      1.00        45\n",
+      "           Family Offenses, Nonviolent       1.00      1.00      1.00        85\n",
+      "                     Forcible Fondling       1.00      1.00      1.00        42\n",
+      "                         Forcible Rape       1.00      1.00      1.00       106\n",
+      "                       Forcible Sodomy       1.00      1.00      1.00        78\n",
+      "                        Identity Theft       1.00      1.00      1.00       119\n",
+      "                         Impersonation       1.00      0.75      0.86         4\n",
+      "                                Incest       1.00      0.50      0.67         2\n",
+      "                          Intimidation       0.99      1.00      1.00       335\n",
+      "                  Justifiable Homicide       0.00      0.00      0.00         1\n",
+      "                 Liquor Law Violations       1.00      0.80      0.89         5\n",
+      "                   Motor Vehicle Theft       1.00      1.00      1.00      1303\n",
+      "                                Murder       1.00      1.00      1.00        61\n",
+      "                        Pocket-Picking       1.00      1.00      1.00         8\n",
+      "                          Prostitution       1.00      1.00      1.00         8\n",
+      "               Purchasing Prostitution       1.00      0.67      0.80         6\n",
+      "                       Purse-Snatching       1.00      0.80      0.89        10\n",
+      "                               Robbery       1.00      1.00      1.00       602\n",
+      "                           Shoplifting       0.99      1.00      1.00       880\n",
+      "                        Simple Assault       1.00      1.00      1.00      2268\n",
+      "                        Statutory Rape       1.00      1.00      1.00        19\n",
+      "              Stolen Property Offenses       1.00      1.00      1.00       217\n",
+      "                   Theft From Building       1.00      1.00      1.00       414\n",
+      "      Theft From Coin-Operated Machine       0.00      0.00      0.00         3\n",
+      "              Theft From Motor Vehicle       1.00      1.00      1.00      1157\n",
+      "Theft of Vehicle Parts and Accessories       1.00      1.00      1.00       702\n",
+      "             Trespass of Real Property       1.00      1.00      1.00       665\n",
+      "                 Weapon Law Violations       0.99      1.00      1.00       120\n",
+      "                            Wire Fraud       1.00      1.00      1.00        68\n",
+      "\n",
+      "                              accuracy                           1.00     12819\n",
+      "                             macro avg       0.92      0.88      0.89     12819\n",
+      "                          weighted avg       1.00      1.00      1.00     12819\n",
+      "\n",
       "Accuracy: 0.9990638895389656\n",
       "F1 Score: 0.9993040587599159\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/brettsquires/opt/anaconda3/envs/dev/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/brettsquires/opt/anaconda3/envs/dev/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import (\n",
     "    accuracy_score,\n",
+    "    classification_report,\n",
     "    confusion_matrix,\n",
     "    ConfusionMatrixDisplay,\n",
     "    f1_score,\n",
@@ -2277,6 +2340,7 @@
     "accuray = accuracy_score(y_pred, y_test)\n",
     "f1 = f1_score(y_pred, y_test, average=\"weighted\")\n",
     "\n",
+    "print(classification_report(y_test, y_pred))\n",
     "print(\"Accuracy:\", accuray)\n",
     "print(\"F1 Score:\", f1)"
    ]
@@ -2284,7 +2348,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "9f669749",
+   "id": "451ac04d",
    "metadata": {
     "scrolled": false
    },
@@ -2309,7 +2373,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "f59907da",
+   "id": "4a9d7c75",
    "metadata": {
     "scrolled": true
    },
@@ -2341,8 +2405,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
-   "id": "9fe4d644",
+   "execution_count": 173,
+   "id": "caae791d",
    "metadata": {
     "scrolled": true
    },
@@ -2350,30 +2414,44 @@
     {
      "data": {
       "text/plain": [
-       "'Forcible Rape'"
+       "'All Other Offenses'"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_test.iloc[100]"
+    "y_test.iloc[99]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "id": "d46b23a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['crime_prediction.joblib']"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from joblib import dump\n",
+    "dump(clf, 'crime_prediction.joblib') "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "700fec80",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3bf78ce6",
+   "id": "dbab4fec",
    "metadata": {},
    "outputs": [],
    "source": []
